@@ -45,7 +45,7 @@ public class ExamplesCodeRefTest {
 	private static final String FIRST_EXAMPLE_CODE_REFERENCE = String.format(EXAMPLE_CODE_REFERENCE_PATTERN, "result:4;vara:2;varb:2");
 	private static final String SECOND_EXAMPLE_CODE_REFERENCE = String.format(EXAMPLE_CODE_REFERENCE_PATTERN, "result:3;vara:1;varb:2");
 	private final String featureId = CommonUtils.namedId("feature_");
-	private final List<String> exampleIds = Stream.generate(() -> CommonUtils.namedId("example_")).limit(2).collect(Collectors.toList());
+	private final List<String> exampleIds = Stream.generate(() -> CommonUtils.namedId("example_")).limit(2).toList();
 	private final List<Pair<String, List<String>>> stepIds = exampleIds.stream()
 			.map(e -> Pair.of(e, Stream.generate(() -> CommonUtils.namedId("step_")).limit(2).collect(Collectors.toList())))
 			.collect(Collectors.toList());
@@ -63,7 +63,7 @@ public class ExamplesCodeRefTest {
 	public void test_examples_code_reference(boolean report) {
 		SuiteResult results;
 		if (report) {
-			results = TestUtils.runAsReportListener(rp, TEST_FEATURE);
+			results = TestUtils.runAsResultListener(rp, TEST_FEATURE);
 		} else {
 			results = TestUtils.runAsEventListener(rp, TEST_FEATURE);
 		}
@@ -82,7 +82,7 @@ public class ExamplesCodeRefTest {
 		assertThat(featureRq.getType(), allOf(notNullValue(), equalTo(ItemType.STORY.name())));
 
 		List<StartTestItemRQ> scenarios = scenarioCaptor.getAllValues();
-		StartTestItemRQ firstScenarioRq = scenarios.get(0);
+		StartTestItemRQ firstScenarioRq = scenarios.getFirst();
 		assertThat(firstScenarioRq.getType(), allOf(notNullValue(), equalTo(ItemType.STEP.name())));
 		assertThat(firstScenarioRq.getCodeRef(), allOf(notNullValue(), equalTo(FIRST_EXAMPLE_CODE_REFERENCE)));
 
